增加通配地址

--- a/UI_Meter698.ui
+++ b/UI_Meter698.ui
@@ -16,14 +16,8 @@
     <height>554</height>
    </size>
   </property>
-  <property name="maximumSize">
-   <size>
-    <width>763</width>
-    <height>554</height>
-   </size>
-  </property>
   <property name="windowTitle">
-   <string>模拟表程序V1.1</string>
+      <string>模拟表程序v1.42</string>
   </property>
   <property name="windowIcon">
    <iconset>
@@ -31,196 +25,195 @@
     <normalon>:/web/source/web.png</normalon>:/web/source/web.png</iconset>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <widget class="QPushButton" name="pushButton">
-    <property name="geometry">
-     <rect>
-         <x>510</x>
-      <y>20</y>
-      <width>71</width>
-      <height>23</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>启动</string>
-    </property>
-   </widget>
-   <widget class="QWidget" name="layoutWidget">
-    <property name="geometry">
-     <rect>
-         <x>0</x>
-      <y>20</y>
-      <width>491</width>
-      <height>24</height>
-     </rect>
-    </property>
-    <layout class="QGridLayout" name="gridLayout">
-     <property name="leftMargin">
-      <number>48</number>
-     </property>
-     <property name="horizontalSpacing">
-      <number>6</number>
-     </property>
-     <property name="verticalSpacing">
-      <number>2</number>
-     </property>
-     <item row="0" column="1">
-      <layout class="QHBoxLayout" name="horizontalLayout_2">
-       <item>
-        <widget class="QLabel" name="label_2">
-         <property name="text">
-          <string>波特率:</string>
-         </property>
-        </widget>
-       </item>
-       <item>
-        <widget class="QComboBox" name="comboBox_2">
-         <property name="editable">
-          <bool>true</bool>
-         </property>
-         <item>
-          <property name="text">
-           <string>2400</string>
-          </property>
-         </item>
-         <item>
-          <property name="text">
-           <string>9600</string>
-          </property>
-         </item>
-        </widget>
-       </item>
+      <layout class="QVBoxLayout" name="verticalLayout">
+          <item>
+              <layout class="QHBoxLayout" name="horizontalLayout_5">
+                  <item>
+                      <layout class="QGridLayout" name="gridLayout">
+                          <property name="leftMargin">
+                              <number>0</number>
+                          </property>
+                          <property name="rightMargin">
+                              <number>0</number>
+                          </property>
+                          <property name="horizontalSpacing">
+                              <number>6</number>
+                          </property>
+                          <property name="verticalSpacing">
+                              <number>2</number>
+                          </property>
+                          <item row="0" column="1">
+                              <layout class="QHBoxLayout" name="horizontalLayout_2">
+                                  <item>
+                                      <widget class="QLabel" name="label_2">
+                                          <property name="text">
+                                              <string>波特率:</string>
+                                          </property>
+                                      </widget>
+                                  </item>
+                                  <item>
+                                      <widget class="QComboBox" name="comboBox_2">
+                                          <property name="editable">
+                                              <bool>true</bool>
+                                          </property>
+                                          <item>
+                                              <property name="text">
+                                                  <string>2400</string>
+                                              </property>
+                                          </item>
+                                          <item>
+                                              <property name="text">
+                                                  <string>9600</string>
+                                              </property>
+                                          </item>
+                                      </widget>
+                                  </item>
+                              </layout>
+                          </item>
+                          <item row="0" column="2">
+                              <layout class="QHBoxLayout" name="horizontalLayout_3">
+                                  <item>
+                                      <widget class="QLabel" name="label_3">
+                                          <property name="text">
+                                              <string>校验位:</string>
+                                          </property>
+                                      </widget>
+                                  </item>
+                                  <item>
+                                      <widget class="QComboBox" name="comboBox_3">
+                                          <item>
+                                              <property name="text">
+                                                  <string>E</string>
+                                              </property>
+                                          </item>
+                                          <item>
+                                              <property name="text">
+                                                  <string>O</string>
+                                              </property>
+                                          </item>
+                                      </widget>
+                                  </item>
+                              </layout>
+                          </item>
+                          <item row="0" column="3">
+                              <layout class="QHBoxLayout" name="horizontalLayout_4">
+                                  <item>
+                                      <widget class="QLabel" name="label_4">
+                                          <property name="text">
+                                              <string>停止位:</string>
+                                          </property>
+                                      </widget>
+                                  </item>
+                                  <item>
+                                      <widget class="QComboBox" name="comboBox_4">
+                                          <property name="editable">
+                                              <bool>true</bool>
+                                          </property>
+                                          <item>
+                                              <property name="text">
+                                                  <string>1</string>
+                                              </property>
+                                          </item>
+                                          <item>
+                                              <property name="text">
+                                                  <string>1.5</string>
+                                              </property>
+                                          </item>
+                                      </widget>
+                                  </item>
+                              </layout>
+                          </item>
+                          <item row="0" column="0">
+                              <layout class="QHBoxLayout" name="horizontalLayout">
+                                  <property name="leftMargin">
+                                      <number>0</number>
+                                  </property>
+                                  <item>
+                                      <widget class="QLabel" name="label">
+                                          <property name="text">
+                                              <string>串口号:</string>
+                                          </property>
+                                      </widget>
+                                  </item>
+                                  <item>
+                                      <widget class="QComboBox" name="comboBox"/>
+                                  </item>
+                              </layout>
+                          </item>
+                      </layout>
+                  </item>
+                  <item>
+                      <spacer name="horizontalSpacer">
+                          <property name="orientation">
+                              <enum>Qt::Horizontal</enum>
+                          </property>
+                          <property name="sizeType">
+                              <enum>QSizePolicy::Expanding</enum>
+                          </property>
+                          <property name="sizeHint" stdset="0">
+                              <size>
+                                  <width>40</width>
+                                  <height>20</height>
+                              </size>
+                          </property>
+                      </spacer>
+                  </item>
+                  <item>
+                      <widget class="QPushButton" name="pushButton">
+                          <property name="sizePolicy">
+                              <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+                                  <horstretch>0</horstretch>
+                                  <verstretch>0</verstretch>
+                              </sizepolicy>
+                          </property>
+                          <property name="text">
+                              <string>启动</string>
+                          </property>
+                      </widget>
+                  </item>
+                  <item>
+                      <widget class="QPushButton" name="pushButton_2">
+                          <property name="sizePolicy">
+                              <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+                                  <horstretch>0</horstretch>
+                                  <verstretch>0</verstretch>
+                              </sizepolicy>
+                          </property>
+                          <property name="text">
+                              <string>清空历史</string>
+                          </property>
+                      </widget>
+                  </item>
+                  <item>
+                      <widget class="QToolButton" name="toolButton">
+                          <property name="text">
+                              <string>...</string>
+                          </property>
+                      </widget>
+                  </item>
+              </layout>
+          </item>
+          <item>
+              <widget class="QTextEdit" name="textEdit">
+                  <property name="horizontalScrollBarPolicy">
+                      <enum>Qt::ScrollBarAlwaysOff</enum>
+                  </property>
+                  <property name="sizeAdjustPolicy">
+                      <enum>QAbstractScrollArea::AdjustIgnored</enum>
+                  </property>
+                  <property name="readOnly">
+                      <bool>true</bool>
+                  </property>
+              </widget>
+          </item>
+          <item>
+              <widget class="QLabel" name="label_5">
+                  <property name="text">
+                      <string>0</string>
+                  </property>
+              </widget>
+          </item>
       </layout>
-     </item>
-     <item row="0" column="2">
-      <layout class="QHBoxLayout" name="horizontalLayout_3">
-       <item>
-        <widget class="QLabel" name="label_3">
-         <property name="text">
-          <string>校验位:</string>
-         </property>
-        </widget>
-       </item>
-       <item>
-        <widget class="QComboBox" name="comboBox_3">
-         <item>
-          <property name="text">
-           <string>E</string>
-          </property>
-         </item>
-         <item>
-          <property name="text">
-           <string>O</string>
-          </property>
-         </item>
-        </widget>
-       </item>
-      </layout>
-     </item>
-     <item row="0" column="3">
-      <layout class="QHBoxLayout" name="horizontalLayout_4">
-       <item>
-        <widget class="QLabel" name="label_4">
-         <property name="text">
-          <string>停止位:</string>
-         </property>
-        </widget>
-       </item>
-       <item>
-        <widget class="QComboBox" name="comboBox_4">
-         <property name="editable">
-          <bool>true</bool>
-         </property>
-         <item>
-          <property name="text">
-           <string>1</string>
-          </property>
-         </item>
-         <item>
-          <property name="text">
-           <string>1.5</string>
-          </property>
-         </item>
-        </widget>
-       </item>
-      </layout>
-     </item>
-     <item row="0" column="0">
-      <layout class="QHBoxLayout" name="horizontalLayout">
-       <property name="leftMargin">
-        <number>0</number>
-       </property>
-       <item>
-        <widget class="QLabel" name="label">
-         <property name="text">
-          <string>串口号:</string>
-         </property>
-        </widget>
-       </item>
-       <item>
-        <widget class="QComboBox" name="comboBox"/>
-       </item>
-      </layout>
-     </item>
-    </layout>
-   </widget>
-   <widget class="QTextEdit" name="textEdit">
-    <property name="geometry">
-     <rect>
-      <x>20</x>
-      <y>60</y>
-      <width>721</width>
-      <height>471</height>
-     </rect>
-    </property>
-    <property name="horizontalScrollBarPolicy">
-     <enum>Qt::ScrollBarAlwaysOff</enum>
-    </property>
-    <property name="sizeAdjustPolicy">
-     <enum>QAbstractScrollArea::AdjustIgnored</enum>
-    </property>
-    <property name="readOnly">
-     <bool>true</bool>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="pushButton_2">
-    <property name="geometry">
-     <rect>
-         <x>600</x>
-      <y>20</y>
-      <width>71</width>
-      <height>23</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>清除</string>
-    </property>
-   </widget>
-   <widget class="QToolButton" name="toolButton">
-    <property name="geometry">
-     <rect>
-         <x>690</x>
-      <y>20</y>
-      <width>31</width>
-      <height>23</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>...</string>
-    </property>
-   </widget>
-   <widget class="QLabel" name="label_5">
-    <property name="geometry">
-     <rect>
-      <x>20</x>
-      <y>537</y>
-      <width>251</width>
-      <height>16</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>0</string>
-    </property>
-   </widget>
   </widget>
  </widget>
  <resources/>
