--- a/UI_Meter698_config.ui
+++ b/UI_Meter698_config.ui
@@ -368,7 +368,7 @@
       <rect>
        <x>0</x>
        <y>270</y>
-          <width>111</width>
+          <width>239</width>
        <height>31</height>
       </rect>
      </property>
@@ -658,7 +658,7 @@
                    <enum>QLineEdit::Normal</enum>
                </property>
                <property name="cursorPosition">
-                   <number>0</number>
+                   <number>95</number>
                </property>
            </widget>
        </widget>
@@ -766,6 +766,8 @@
                        p, li { white-space: pre-wrap; }
                        &lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'SimSun'; font-size:9pt;
                        font-weight:400; font-style:normal;&quot;&gt;
+                       &lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px;
+                       -qt-block-indent:0; text-indent:0px;&quot;&gt; &lt;/p&gt;
                        &lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px;
                        -qt-block-indent:0; text-indent:0px;&quot;&gt; &lt;/p&gt;
                        &lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px;
