--- a/UI_Meter698_config.ui
+++ b/UI_Meter698_config.ui
@@ -265,6 +265,9 @@
                  <property name="enabled">
                      <bool>false</bool>
                  </property>
+                 <property name="acceptRichText">
+                     <bool>false</bool>
+                 </property>
              </widget>
          </item>
         </layout>
@@ -282,6 +285,12 @@
              <widget class="QTextEdit" name="textEdit_2">
                  <property name="enabled">
                      <bool>false</bool>
+                 </property>
+                 <property name="acceptRichText">
+                     <bool>false</bool>
+                 </property>
+                 <property name="placeholderText">
+                     <string>包含载波搜表回复地址,白名单关闭或搜表帧用全A回复地址为:000000000001</string>
                  </property>
              </widget>
          </item>
@@ -368,7 +377,7 @@
       <rect>
        <x>0</x>
        <y>270</y>
-          <width>239</width>
+          <width>121</width>
        <height>31</height>
       </rect>
      </property>
@@ -658,7 +667,7 @@
                    <enum>QLineEdit::Normal</enum>
                </property>
                <property name="cursorPosition">
-                   <number>95</number>
+                   <number>0</number>
                </property>
            </widget>
        </widget>
@@ -766,6 +775,8 @@
                        p, li { white-space: pre-wrap; }
                        &lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'SimSun'; font-size:9pt;
                        font-weight:400; font-style:normal;&quot;&gt;
+                       &lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px;
+                       -qt-block-indent:0; text-indent:0px;&quot;&gt; &lt;/p&gt;
                        &lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px;
                        -qt-block-indent:0; text-indent:0px;&quot;&gt; &lt;/p&gt;
                        &lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px;
