--- a/UI_Meter698.ui
+++ b/UI_Meter698.ui
@@ -207,11 +207,35 @@
               </widget>
           </item>
           <item>
-              <widget class="QLabel" name="label_5">
-                  <property name="text">
-                      <string>0</string>
-                  </property>
-              </widget>
+              <layout class="QHBoxLayout" name="horizontalLayout_6">
+                  <item>
+                      <widget class="QLabel" name="label_5">
+                          <property name="text">
+                              <string/>
+                          </property>
+                      </widget>
+                  </item>
+                  <item>
+                      <spacer name="horizontalSpacer_2">
+                          <property name="orientation">
+                              <enum>Qt::Horizontal</enum>
+                          </property>
+                          <property name="sizeHint" stdset="0">
+                              <size>
+                                  <width>40</width>
+                                  <height>20</height>
+                              </size>
+                          </property>
+                      </spacer>
+                  </item>
+                  <item>
+                      <widget class="QCheckBox" name="checkBox">
+                          <property name="text">
+                              <string>日志会话</string>
+                          </property>
+                      </widget>
+                  </item>
+              </layout>
           </item>
       </layout>
   </widget>
