--- a/UI_Meter698_config.ui
+++ b/UI_Meter698_config.ui
@@ -1,3 +1,5 @@
+请求您删除部分侵权代码！请您联系我，电话/微信：17512549214 邮箱：2259461527@qq.com
+
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
  <class>Dialog</class>
